[tool.poetry]
name = "pytorch_sandbox"
version = "0.1.0"
description = "Playing around with PyTorch"
authors = [ "Benjamin Labrecque" ]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
ipython = "^8.15.0"
jupyterlab = "^4.0.5"
pendulum = "^2.1.2"
numpy = "^1.25.2"
torchvision = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.2.2"
